make markup of main guest page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,22 +2,23 @@
     ViewData["Title"] = "Главная";
 }
 
-<div class="text-center">
-    <form action="/Home/SendOrder" method="post">
-        <div class="mb-3">
-            <label for="name">Имя: </label>
-            <input type="text" name="name" id="name" required />
+<div>
+    <p class="greeting-for-form">Оставить заявку или задать вопрос</p>
+    <form action="/Home/SendOrder" method="post" class="order-form">
+        <div class="wrapper input1-wrapper">
+            <label class="label" for="name">Имя: </label>
+            <input class="input" type="text" name="name" id="name" maxlength="50" required />
         </div>
-        <div class="mb-3">
-            <label for="email">Email: </label>
-            <input type="email" name="email" id="email" required />
+        <div class="wrapper input2-wrapper">
+            <label class="label" for="email" class="label">Email: </label>
+            <input class="input" type="email" name="email" id="email" required />
         </div>
-        <div class="mb-3">
-            <label for="message">Текст сообщения: </label>
-            <input type="text" name="message" id="message" required />
+        <div class="wrapper comment-wrapper">
+            <label class="label" for="message" class="label">Текст сообщения: </label>
+            <input class="input" type="text" name="message" id="message" maxlength="150" required />
         </div>
-        <div class="mb-3">
-            <input type="submit" value="Отправить" class="btn btn-primary" />
+        <div class="wrapper btn-wrapper">
+            <input class="btn" type="submit" value="Отправить" />
         </div>
     </form>
 </div>
