--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,42 +1,38 @@
-﻿@*за основу взят шаблон стиля bootscrap по ссылке https://startbootstrap.com/template/sb-admin*@
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - CRMSystem</title>
+    <link rel="stylesheet" href="~/css/normalize.css"/>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/CRMSystem.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css"/>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Главная</a>
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Услуги</a>
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Проекты</a>
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Блог</a>
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Контакты</a>
-            </div>
-            <div class="container-fluid">
-                <h3>Расширяем возможности</h3>
-            </div>
-        </nav>
+        <div class="header">
+            <nav>
+                <ul class="nav">
+                    <li><a href="#">Главная</a></li>
+                    <li><a href="#">Услуги</a></li>
+                    <li><a href="#">Проекты</a></li>
+                    <li><a href="#">Блог</a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </nav>
+            <h1 class="slogan">Расширяем возможности</h1>
+        </div>        
     </header>
 
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+    <div>
+        @RenderBody()
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - CRMSystem</a>
-        </div>
+    <footer>
+        <div class="footer"></div>
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
