add projects page

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,13 +20,26 @@ html {
 body {
   margin: 0px;
   padding: 0px;
+  box-sizing: border-box;
+}
+
+:root {
+  --container-offset: 100px;
+  --main-color: dodgerblue;
+  --border-color: gray;
+  --back-color: lightgray;
+  --decorate-font-color: white;
+  --main-font-color: #112223;
+  --cards-gap: 10px;
+  --project-cards-in-row: 3;
+  --blog-cards-in-row: 4;
 }
 
 .header{
   width: 100%;
   height: auto;
-  background-color: dodgerblue;
-  color: white;
+  background-color: var(--main-color);
+  color: var(--decorate-font-color);
 }
 
 .nav {
@@ -42,7 +55,7 @@ body {
   display: block;
   margin-top: 30px;
   padding-right: 30px;
-  color: white;
+  color: var(--decorate-font-color);
   text-decoration: none;
 }
 
@@ -58,22 +71,22 @@ body {
   bottom: 0px;
   width: 100%;
   height: 15px;
-  background-color: dodgerblue;
+  background-color: var(--main-color);
 }
 
 .order-form{
   display: grid;
-  grid-template-columns: 200px 1fr 50px 1fr 200px;
+  grid-template-columns: var(--container-offset) 1fr 50px 1fr var(--container-offset);
   grid-template-rows: 4em 10px 6em 10px 3em;
   width: auto;
 }
 
-.greeting-for-form{
+.greeting-for-form {
   text-align: left;
   font-weight: bold;
-  color: darkslategrey;
+  color: var(--main-color);
   margin: 30px;
-  margin-left: 200px;
+  margin-left: var(--container-offset);
 }
 
 .wrapper {
@@ -112,7 +125,7 @@ body {
 
 .input {  
   display: block;
-  background-color: lightgray;
+  background-color: var(--back-color);
   height: 100%;
 }
 
@@ -120,7 +133,55 @@ body {
   width: auto;
   padding: 10px;
   border-radius: 5px;
-  background-color: dodgerblue;
-  color: white;
+  background-color: var(--main-color);
+  color: var(--decorate-font-color);
   align-content: center;
 }
+
+.container{
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
+  width: auto;
+  height: auto;
+}
+
+.container-title{
+  color: var(--main-color);
+}
+
+.separator-line{
+  background-color: var(--back-color);
+}
+
+.section-content{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  flex-basis: auto;
+  gap: var(--cards-gap);
+}
+
+.project-card {
+  width: calc((100% - (var(--project-cards-in-row) - 1) * var(--cards-gap)) / var(--project-cards-in-row));
+  height: auto;
+  border: 1px solid var(--border-color);
+  text-align: center;
+}
+
+.project-img {
+  height: calc(100% - 3em);
+  width: 100%;
+}
+
+.project-title{
+  min-height: 3em;
+  padding: 10px;
+  color: var(--main-font-color);
+  background-color: var(--back-color);
+  vertical-align: central;
+  margin-bottom: 0px;
+}
+
