add projects page and services page

--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -3,24 +3,26 @@
 }
 
 <main class="container">
-    <h2 class="container-title">Проекты</h2>
+    <div class="container-title">
+        <h2>Проекты</h2>
+    </div>
     <div class="separator-line"></div>
-    <section class="section-content">
+    <section class="cards-block">
         <article class="project-card">            
             <img class="project-img" src="../img/card1.png" alt="project card1"/>
-            <a href="GetProjectDescription" target="_self">           
+            <a href="ProjectDescription" target="_self">           
                 <p class="project-title">Обработка кредитных заявок</p>
             </a>
         </article>
         <article class="project-card">
             <img class="project-img" src="../img/card2.png" alt="project card2"/>
-            <a href="GetProjectDescription" target="_self">
+            <a href="ProjectDescription" target="_self">
                 <p class="project-title">Управление кадрами</p>
             </a>
         </article>
         <article class="project-card">
             <img class="project-img" src="../img/card3.png" alt="project card3"/>
-            <a href="GetProjectDescription" target="_self">
+            <a href="ProjectDescription" target="_self">
                 <p class="project-title">Доработка CRM</p>
             </a>
         </article>
