--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,12 +13,12 @@
         <div class="header">
             <nav>
                 <ul class="nav">
-                    <li><a href="#">Главная</a></li>
-                    <li><a href="#">Услуги</a></li>
-                    <li><a href="#">Проекты</a></li>
-                    <li><a href="#">Блог</a></li>
+                    <li><a href="/Home/Index">Главная</a></li>
+                    <li><a href="/Services/Index">Услуги</a></li>
+                    <li><a href="/Projects/Index">Проекты</a></li>
+                    <li><a href="/Blogs/Index">Блог</a></li>
                     <li><a href="#"></a></li>
-                    <li><a href="#">Контакты</a></li>
+                    <li><a href="/Contacts/Index">Контакты</a></li>
                 </ul>
             </nav>
             <h1 class="slogan">Расширяем возможности</h1>
