fixed logo in project description page

--- a/Views/Services/Index.cshtml
+++ b/Views/Services/Index.cshtml
@@ -8,11 +8,11 @@
     </div>    
     <div class="separator-line"></div>
     <section class="description-block">
-        <details>
+        <details class="detailes">
             <summary>Импортозамещение</summary>
             <p class="article">Текст по импортозамещению</p>
         </details>
-        <details>
+        <details class="detailes">
             <summary>Аналитика</summary>
             <p class="article">Текст по аналитике</p>
         </details>
