--- a/Views/Projects/ProjectDescription.cshtml
+++ b/Views/Projects/ProjectDescription.cshtml
@@ -4,9 +4,11 @@
 
 <main class="container">
     <div class="container-title">
-        <h2>Обработка кредитных заявок</h2>
-        <div class="logo">
-            <img src="../img/card1.png" alt="project card1" />
+        <div>
+            <h2>Обработка кредитных заявок</h2>
+        </div>
+        <div>
+            <img class="container-title logo" src="../img/card1.png" alt="project card1" />
         </div>
     </div>    
     <div class="separator-line"></div>
