--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -35,6 +35,7 @@ body {
   --blog-cards-in-row: 4;
 }
 
+/*header*/
 .header{
   width: 100%;
   height: auto;
@@ -42,6 +43,7 @@ body {
   color: var(--decorate-font-color);
 }
 
+/*navigation panel*/
 .nav {
   display: flex;
   flex-direction: row;
@@ -65,6 +67,7 @@ body {
   text-transform: uppercase;
 }
 
+/*footer*/
 .footer {
   position: absolute;
   left: 0px;
@@ -74,6 +77,7 @@ body {
   background-color: var(--main-color);
 }
 
+/*main page with the form*/
 .order-form{
   display: grid;
   grid-template-columns: var(--container-offset) 1fr 50px 1fr var(--container-offset);
@@ -138,6 +142,7 @@ body {
   align-content: center;
 }
 
+/*projects page with cards of projects*/
 .container{
   margin-top: 30px;
   margin-left: auto;
@@ -147,13 +152,14 @@ body {
   height: auto;
 }
 
-.container-title{
+.container-title {
+  width: inherit;
   color: var(--main-color);
-  margin-bottom: 10px;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-between;
+  max-height: 3em;
 }
 
 .separator-line{
@@ -170,7 +176,6 @@ body {
   justify-content: space-between;
   flex-basis: auto;
   gap: var(--cards-gap);
-  vertical-align: central;
 }
 
 .project-card {
@@ -185,8 +190,7 @@ body {
   width: 100%;
 }
 
-.project-title{
-  min-height: 3em;
+.project-title {
   padding: 10px;
   color: var(--main-font-color);
   background-color: var(--back-color);
@@ -194,21 +198,54 @@ body {
   margin-bottom: 0px;
 }
 
+
+/*project description page*/
 .article{
   color: var(--main-font-color);
   text-align: justify;
   padding: 10px;
 }
 
-.logo{
-  width: 100px;
-  height: auto;
-  margin-left: 10px;
-  float: right;
+.container-title .logo {
+  width: auto;
+  max-height: 3em;
+  object-fit: contain;
 }
 
+/*services page with details*/
 .description-block{
   width: calc(100% - 110px);
   height: 100%;
+  margin-bottom: 20px;
 }
+
+.detailes{
+  width: calc(100% - 100px);
+  height: auto;
+  background-color: var(--main-color);
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.detailes > summary {
+  padding: 10px;
+  color: var(--decorate-font-color);
+  font-weight: bold;
+  text-align: left;
+}
+
+.detailes[open] {
+  background-color: white;
+  border: 1px solid var(--main-color);
+  border-radius: 5px;
+}
+
+.detailes[open] > summary {
+  color: var(--main-color);
+}
+
+.detailes[open] > p{
+  padding-left: 20px;
+}
+
 
