add blog page and article description page

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                     <li><a href="/Home/Index">Главная</a></li>
                     <li><a href="/Services/Index">Услуги</a></li>
                     <li><a href="/Projects/Index">Проекты</a></li>
-                    <li><a href="/Blogs/Index">Блог</a></li>
+                    <li><a href="/Blog/Index">Блог</a></li>
                     <li><a href="#"></a></li>
                     <li><a href="/Contacts/Index">Контакты</a></li>
                 </ul>
