add authentication folder, admincontroller, login and register views

--- a/Views/Blog/Index.cshtml
+++ b/Views/Blog/Index.cshtml
@@ -40,7 +40,7 @@
             </a>
             <div class="article blog-text">
                 <h5 class="blog-text blog-card-title">Производственная безопасность</h5>
-                <p">Текст карточки по производственной безопасности по решения автоматизации</p>
+                <p>Текст карточки по производственной безопасности по решения автоматизации</p>
             </div>
         </article>
         <article class="blog-card">
