--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -7,21 +7,32 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Login</th>
+                <th>UserName</th>
                 <th>Email</th>
-                <th>Password</th>
             </tr>
         </thead>
         <tbody>
-            @foreach(AppUser user in Model)     
+            @foreach(AppUser user in Model)
             {
                 <tr>
                     <td>@user.Id</td>
                     <td>@user.UserName</td>
                     <td>@user.Email</td>
-                    <td>@user.PasswordHash</td>
+                    <td>
+                        <a method="get" asp-controller="Admin" asp-action="EditAppUser" asp-route-id="@user.Id">
+                            <input type="submit" value="Изменить" />
+                        </a>
+                    </td>
+                    <td>
+                        <form method="post" asp-controller="Admin" asp-action="DeleteAppUser" asp-route-id="@user.Id">                           
+                            <input type="submit" value="Удалить">
+                        </form>
+                    </td>
                 </tr>
             }
         </tbody>
-    </table>
+    </table>    
+    <a asp-controller="Admin" asp-action="CreateAppUser" method="get">
+        <input type="button" value="Создать" />
+    </a> 
 </main>
