--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,10 +13,10 @@
         <div class="header">
             <nav>
                 <ul class="nav">
-                    <li><a href="/Admin/Index">Список пользователей</a></li>
-                    <li><a href="/Admin/Register">Регистрация</a></li>
-                    <li><a href="/Admin/Login">Войти</a></li>
-                    <li><a href="/Admin/Logout">Выйти</a></li>
+                    <li><a href="#">Список пользователей</a></li>
+                    <li><a href="#">Регистрация</a></li>
+                    <li><a href="#">Войти</a></li>
+                    <li><a href="#">Выйти</a></li>
                 </ul>
             </nav>
             <nav>
