add AccountController with LoginVM and view LogIn, fix bug in AppUsersDbContext, drop databeses and add-migrations again

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,9 +14,9 @@
             <nav>
                 <ul class="nav">
                     <li><a href="#">Список пользователей</a></li>
-                    <li><a href="#">Регистрация</a></li>
-                    <li><a href="#">Войти</a></li>
-                    <li><a href="#">Выйти</a></li>
+                    <li><a href="/Account/Register">Регистрация</a></li>
+                    <li><a href="/Account/LogIn">Войти</a></li>
+                    <li><a href="/Account/LogOut">Выйти</a></li>
                 </ul>
             </nav>
             <nav>
