--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,8 +13,7 @@
         <div class="header">
             <nav>
                 <ul class="nav">
-                    <li><a href="#">Список пользователей</a></li>
-                    <li><a href="/Account/Register">Регистрация</a></li>
+                    <li><a href="/Admin/Index">Список пользователей</a></li>
                     <li><a href="/Account/LogIn">Войти</a></li>
                     <li><a href="/Account/LogOut">Выйти</a></li>
                 </ul>
