add aside navigation if user.Is InRole(admin) into layout.cshtml

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Главная";
 }
 
-<div>
+<main class="container">
     <p class="greeting-for-form">Оставить заявку или задать вопрос</p>
     <form action="/Home/AddOrder" method="post" class="order-form">
         <div class="wrapper input1-wrapper">
@@ -21,4 +21,4 @@
             <input class="btn" type="submit" value="Отправить"/>
         </div>
     </form>
-</div>
+</main>
