--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -55,7 +55,7 @@ body {
 .nav a {
   width: auto;
   display: block;
-  margin-top: 30px;
+  margin: 10px;
   padding-right: 30px;
   color: var(--decorate-font-color);
   text-decoration: none;
@@ -67,13 +67,30 @@ body {
   text-transform: uppercase;
 }
 
+/*.main-wrapper for admin aside and main content*/
+.main-wrapper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+/*aside*/
+.aside {
+  background-color: var(--main-color);
+  float: left;
+  width: auto;
+  height: inherit;
+  padding: 10px;
+  margin-right: 10px;
+}
+
 /*footer*/
 .footer {
   position: absolute;
   left: 0px;
   bottom: 0px;
   width: 100%;
-  height: 15px;
+  height: 1em;
   background-color: var(--main-color);
 }
 
@@ -83,6 +100,7 @@ body {
   grid-template-columns: var(--container-offset) 1fr 50px 1fr var(--container-offset);
   grid-template-rows: 4em 10px 6em 10px 3em;
   width: auto;
+  margin-top: 0;
 }
 
 .greeting-for-form {
@@ -143,8 +161,9 @@ body {
 }
 
 /*projects page with cards of projects*/
-.container{
-  margin-top: 30px;
+.container {
+  display: flex;
+  flex-direction: column;
   margin-left: auto;
   margin-right: auto;
   max-width: 1200px;
@@ -155,16 +174,13 @@ body {
 .container-title {
   width: inherit;
   color: var(--main-color);
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
   max-height: 3em;
+  margin-top: 10px;
 }
 
-.separator-line{
+.separator-line {
+  width: inherit;
   background-color: var(--back-color);
-  width: 100%;
   height: 5px;
   margin-bottom: 20px;
 }
