--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -53,12 +53,12 @@ body {
 }
 
 .nav a {
-  width: auto;
-  display: block;
-  margin: 10px;
-  padding-right: 30px;
-  color: var(--decorate-font-color);
-  text-decoration: none;
+    width: auto;
+    display: block;
+    margin: 10px;
+    padding-right: 30px;
+    color: var(--decorate-font-color);
+    text-decoration: none;
 }
 
 .slogan{
@@ -76,12 +76,20 @@ body {
 
 /*aside*/
 .aside {
-  background-color: var(--main-color);
-  float: left;
-  width: auto;
-  height: inherit;
-  padding: 10px;
-  margin-right: 10px;
+    background-color: var(--main-color);
+    color: var(--decorate-font-color);
+    float: left;
+    width: auto;
+    height: inherit;
+    padding: 10px;
+    list-style-type: none;
+}
+
+.aside a {
+    width: auto;
+    display: block;
+    color: var(--decorate-font-color);
+    text-decoration: none;
 }
 
 /*footer*/
@@ -162,13 +170,22 @@ body {
 
 /*projects page with cards of projects*/
 .container {
-  display: flex;
-  flex-direction: column;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1200px;
-  width: auto;
-  height: auto;
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1200px;
+    width: 100%;
+    height: 100%;
+}
+
+.colored-container {
+    background-color: var(--back-color);
+    margin-left: 0;
+    margin-right: 0;
+    max-width: 100%;
+    width: auto;
+    height: 100%;
 }
 
 .container-title {
@@ -332,3 +349,32 @@ body {
   justify-content: flex-start;
   bottom: 10px;
 }
+
+/*desktop page*/
+.desktop-table {
+    border: 3px solid var(--back-color);
+    background-color: white;
+    table-layout: auto;
+    width: 100%;
+    text-align: center;
+    vertical-align: bottom;
+    color: var(--main-font-color);
+}
+
+.desktop-table a {
+    display: inline-block;
+    margin: 5px;
+    padding: 5px;
+    color: var(--main-font-color);
+    text-decoration: none;
+    border: 3px solid var(--back-color);
+}
+
+.desktop-table a:hover {
+    color: var(--main-color);
+}
+
+.date-form {
+    display: inline;
+}
+
