fix error, add default.json into wwwroot-folder and make deserialize in layout.cshtml, index page for admin is ready

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,12 @@
-﻿<!DOCTYPE html>
+﻿@using CRMSystem.ViewModels;
+@using System.Text.Json;
+
+@{
+    using var fs = new FileStream("./wwwroot/files/default.json", FileMode.Open);
+    var FieldValuesVM = JsonSerializer.Deserialize<FieldValuesViewModel>(fs);
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -23,11 +31,11 @@
             <nav>
                 <ul class="nav">
                     <li><a href="/Home/Index">Главная</a></li>
-                        <li><a href="/Services/Index">@ViewBag.FieldValues.ServiceMenuItemName</a></li>
-                        <li><a href="/Projects/Index">@ViewBag.FieldValues.ProjectMenuItemName</a></li>
-                        <li><a href="/Blog/Index">@ViewBag.FieldValues.BlogMenuItemName</a></li>
+                        <li><a href="/Services/Index">@FieldValuesVM.ServiceMenuItemName</a></li>
+                        <li><a href="/Projects/Index">@FieldValuesVM.ProjectMenuItemName</a></li>
+                        <li><a href="/Blog/Index">@FieldValuesVM.BlogMenuItemName</a></li>
                     <li><a href="#"></a></li>
-                        <li><a href="/Contacts/Index">@ViewBag.FieldValues.ContactsMenuItemName</a></li>
+                        <li><a href="/Contacts/Index">@FieldValuesVM.ContactsMenuItemName</a></li>
                 </ul>
             </nav>
             <h1 class="slogan">Расширяем возможности</h1>
@@ -43,15 +51,15 @@
                     <ul class="aside">
                         <li><a href="/Home/Desktop">Рабочий стол</a></li>
                         <li><a href="/Home/Index">Главная</a></li>
-                        <li><a href="/Projects/Index">@ViewBag.FieldValues.ProjectMenuItemName</a></li>
-                        <li><a href="/Services/Index">@ViewBag.FieldValues.ServiceMenuItemName</a></li>
-                        <li><a href="/Blog/Index/">@ViewBag.FieldValues.BlogMenuItemName</a></li>
-                        <li><a href="/Contacts/Index">@ViewBag.FieldValues.ContactsMenuItemName</a></li>
+                        <li><a href="/Projects/Index">@FieldValuesVM.ProjectMenuItemName</a></li>
+                        <li><a href="/Services/Index">@FieldValuesVM.ServiceMenuItemName</a></li>
+                        <li><a href="/Blog/Index/">@FieldValuesVM.BlogMenuItemName</a></li>
+                        <li><a href="/Contacts/Index">@FieldValuesVM.ContactsMenuItemName</a></li>
                     </ul>
                 </nav>
-            </aside>
-            @RenderBody()
+            </aside>            
         }
+        @RenderBody()
     </div>
 
     <footer>
