--- a/Views/Home/Edit.cshtml
+++ b/Views/Home/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using CRMSystem.ViewModels
-@model HomePageFieldValuesViewModel
+@model FieldValuesViewModel
 
 <main class="container">
     <form method="post" asp-controller="Home" asp-action="Edit">
