--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,14 @@
-﻿
+﻿@using CRMSystem.ViewModels;
+
+@using System.Text.Json;
+
+@{
+    using var fs = new FileStream("./wwwroot/files/default.json", FileMode.Open);
+    var FieldValuesVM = JsonSerializer.Deserialize<FieldValuesViewModel>(fs);
+}
+
 <main class="container">
-    <p class="text-before-form">@ViewBag.FieldValues.PrecedingFormText</p>
+    <p class="text-before-form">@FieldValuesVM.PrecedingFormText</p>
     <form action="/Home/AddOrder" method="post" class="order-form">
         <div class="wrapper input1-wrapper">
             <label class="label" for="name">Имя: </label> 
