--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@using CRMSystem.Authentication
 @model IEnumerable<AppUser>
+@{
+    ViewData["Title"] = "Список пользователей";
+}
 
 <main class="container">
     <div>
