--- a/Views/Home/ChangeStatus.cshtml
+++ b/Views/Home/ChangeStatus.cshtml
@@ -1,4 +1,7 @@
 ﻿@model OrderStatus
+@{
+    ViewData["Title"] = "Рабочий стол";
+}
 
 <main class="container">
     <input type="hidden" name="orderId" value=@ViewBag.OrderId/>
