--- a/Views/Home/Edit.cshtml
+++ b/Views/Home/Edit.cshtml
@@ -1,5 +1,8 @@
 ﻿@using CRMSystem.ViewModels
 @model FieldValuesViewModel
+@{
+    ViewData["Title"] = "Главная";
+}
 
 <main class="container">
     <form method="post" asp-controller="Home" asp-action="Edit">
