--- a/Views/Admin/EditAppUser.cshtml
+++ b/Views/Admin/EditAppUser.cshtml
@@ -1,5 +1,8 @@
 ﻿@using CRMSystem.ViewModels
 @model AppUserViewModel
+@{
+    ViewData["Title"] = "Список пользователей";
+}
 
 <main class="container">
     <div asp-validation-summary="All">
