--- a/Views/Blog/ArticleDescription.cshtml
+++ b/Views/Blog/ArticleDescription.cshtml
@@ -1,5 +1,9 @@
-﻿
+﻿@using CRMSystem.ViewModels;
+@using System.Text.Json;
 @{
+    using var fs = new FileStream("./wwwroot/files/default.json", FileMode.Open);
+    var FieldValuesVM = JsonSerializer.Deserialize<FieldValuesViewModel>(fs);
+    ViewData["Title"] = FieldValuesVM?.BlogMenuItemName ?? "Блог";
 }
 
 <main class="container">
