--- a/Views/Blog/Index.cshtml
+++ b/Views/Blog/Index.cshtml
@@ -1,9 +1,14 @@
-﻿@{
+﻿@using CRMSystem.ViewModels;
+@using System.Text.Json;
+@{
+    using var fs = new FileStream("./wwwroot/files/default.json", FileMode.Open);
+    var FieldValuesVM = JsonSerializer.Deserialize<FieldValuesViewModel>(fs);
+    ViewData["Title"] = FieldValuesVM?.BlogMenuItemName ?? "Блог";
 }
 
 <main class="container">
     <div class="container-title">
-        <h2>Блог</h2>
+        <h2>@ViewData["Title"]</h2>
     </div>    
     <div class="separator-line"></div>
     <section class="cards-block">
