--- a/Views/Contacts/Index.cshtml
+++ b/Views/Contacts/Index.cshtml
@@ -1,12 +1,14 @@
-﻿
+﻿@using CRMSystem.ViewModels;
+@using System.Text.Json;
 @{
+    using var fs = new FileStream("./wwwroot/files/default.json", FileMode.Open);
+    var FieldValuesVM = JsonSerializer.Deserialize<FieldValuesViewModel>(fs);
+    ViewData["Title"] = FieldValuesVM?.ContactsMenuItemName ?? "Контакты";
 }
 
 <main class="container">
     <div class="container-title">
-        <h2>
-            Контакты
-        </h2>
+        <h2>@ViewData["Title"]</h2>
     </div>
     <div class="separator-line"></div>
     <section class="contacts-container">
