--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,10 +1,9 @@
 ﻿@using CRMSystem.ViewModels;
-
 @using System.Text.Json;
-
 @{
     using var fs = new FileStream("./wwwroot/files/default.json", FileMode.Open);
     var FieldValuesVM = JsonSerializer.Deserialize<FieldValuesViewModel>(fs);
+    ViewData["Title"] = "Главная";
 }
 
 <main class="container">
