--- a/Views/Home/OrderAdded.cshtml
+++ b/Views/Home/OrderAdded.cshtml
@@ -1,4 +1,8 @@
-﻿<main class="container">
+﻿@{
+    ViewData["Title"] = "Главная";
+}
+
+<main class="container">
     <div style="border: 1px solid blue; color: blue; font-size: 1.5em; text-align: center;
         width: auto; margin: 20px; padding: 10px;">
         Заявка успешно отправлена
